# blend-my-bot

./: LICENSE  README.md  setup.cfg  setup_conda_blender.sh
.github/workflows/: pypi-ci.yml
examples/: jumping.pickle  jumping.py
examples/jumping/: main.py
src/blend_my_bot/: __init__.py  blender_model.py  link.py  model_importer.py
