[metadata]
name = blend-my-bot
description = A package to import URDF files into Blender
long_description = file: README.md
long_description_content_type = text/markdown
author = "Giuseppe L'Erario"
author_email = gl.giuseppelerario@gmail.com
license_files = LICENSE

keywords =
    robotics
    blender
    animation

[options]
packages = find:
package_dir =
        = src
python_requires = >=3.10
install_requires =
        idyntree
        numpy
        bpy

[options.packages.find]
where = src
